# permission-gateway

./: Cargo.toml  Dockerfile  docker-compose.yml  makefile  readme.md
src/: config.rs  jwt.rs  main.rs  request.rs  session.rs  sessions.rs  user.rs  utils.rs
src/k8/: config-map.yml  deployment.yml
src/request/: add_key.rs  mod.rs  utils.rs  web_socket.rs
src/socket/: gen_socket_key.rs  mod.rs  permission.rs  web_socket.rs
